# Arachne

./: .env.example  .gitignore  ARCHITECTURE.md  BENCHMARKS.md  LICENSE  README.md  justfile
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.moon/: toolchain.yml  workspace.yml
apps/api-gateway/: Dockerfile  README.md  moon.yml  pyproject.toml
apps/api-gateway/src/: config.py  dependencies.py  main.py
apps/api-gateway/src/routers/: __init__.py  health.py  jobs.py
apps/dashboard/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
apps/dashboard/src/: App.tsx  index.css
apps/dashboard/src/pages/: EvasionMap.tsx  ExtractionStats.tsx  LiveFeed.tsx
apps/extraction-engine/: Dockerfile  README.md  moon.yml  pyproject.toml
apps/extraction-engine/src/: activities.py  config.py  health.py  main.py
apps/extraction-engine/src/workflows/: change_monitor_workflow.py  drift_monitor_workflow.py
apps/worker-http/: Dockerfile  README.md  moon.yml  pyproject.toml
apps/worker-http/src/: activities.py  config.py  errors.py  extraction_engine.py  main.py
apps/worker-http/src/workflows/: __init__.py  scrape_workflow.py
apps/worker-stealth/: Dockerfile  README.md  pyproject.toml
apps/worker-stealth/src/: activities.py  config.py  main.py
apps/worker-stealth/src/workflows/: __init__.py  stealth_scrape_workflow.py
benchmarks/: README.md  vision_pipeline_comparison.py
docs/adr/: 001-moonrepo-for-monorepo.md  002-bun-over-pnpm.md  003-redpanda-over-kafka.md  004-temporal-for-orchestration.md  005-claim-check-for-large-payloads.md  006-curl-cffi-for-tls-spoofing.md  007-adaptive-evasion-router.md  008-multi-model-extraction-routing.md  README.md
examples/: README.md  demo_e2e.py
infra/: README.md  docker-compose.dev.yml  docker-compose.yml  otel-collector-config.yaml
infra/scripts/: README.md  init-topics.py
