[project]
name = "arachne-api-gateway"
version = "0.1.0"
description = "FastAPI REST API for the Arachne web intelligence platform"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "temporalio>=1.9,<2",
    "pydantic-settings>=2.7,<3",
    "structlog>=24.4,<25",
    "arachne-models",
    "arachne-messaging",
    "arachne-storage",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
