[project]
name = "arachne-extraction-engine"
version = "0.1.0"
description = "AI extraction engine service — Temporal worker for LLM-based extraction, schema discovery, and CAPTCHA solving"
requires-python = ">=3.12"
dependencies = [
    "arachne-extraction",
    "arachne-models",
    "arachne-messaging",
    "arachne-storage",
    "temporalio>=1.8,<2",
    "structlog>=24.4,<25",
    "pydantic-settings>=2.7,<3",
    "httpx>=0.28,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]
