[project]
name = "arachne-worker-http"
version = "0.1.0"
description = "Temporal worker for HTTP fetching — the first tier of Arachne's crawl pipeline"
requires-python = ">=3.13"
dependencies = [
    "temporalio>=1.9,<2",
    "httpx>=0.28,<1",
    "pydantic-settings>=2.7,<3",
    "structlog>=24.4,<25",
    "arachne-models",
    "arachne-messaging",
    "arachne-storage",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
