[project]
name = "arachne-worker-stealth"
version = "0.1.0"
description = "Temporal worker for stealth browser-based fetching — handles escalated jobs from worker-http"
requires-python = ">=3.13"
dependencies = [
    "temporalio>=1.9,<2",
    "pydantic-settings>=2.7,<3",
    "structlog>=24.4,<25",
    "arachne-models",
    "arachne-messaging",
    "arachne-storage",
    "arachne-stealth[browsers]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
